Fix trending spacing

--- a/style.css
+++ b/style.css
@@ -200,8 +200,12 @@ body {
 
 .trendingRow {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 3fr; 
+    grid-template-rows: 1fr;
+}
+
+.trendingRow div {
+    align-self: center;
 }
 
 .trendingRow > img {
